--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xlfill2pdf"
-version = "0.1.7"
+version = "0.1.8"
 description = "Excel to PDF converter with font support"
 authors = ["'fkl' <18654198191@163.com>"]
 readme = "README.md"
@@ -22,14 +22,14 @@ homepage = "https://github.com/xiwen-haochi/xlfill2pdf"
 repository = "https://github.com/xiwen-haochi/xlfill2pdf"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-qrcode = ">=7.0,<=8.0"
-reportlab = "^3.6.8"
-openpyxl = "^3.0.9"
+python = ">=3.6"
+qrcode = ">=7.0.0"
+reportlab = ">=3.6.8"
+openpyxl = ">=3.0.9"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^6.0.0"
-pytest-cov = "^2.12.0"
+pytest = ">=6.0.0"
+pytest-cov = ">=2.12.0"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
